# lofty-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORTED_FORMATS.md  rustfmt.toml
aud_io/: Cargo.toml
aud_io/src/: alloc.rs  error.rs  io.rs  lib.rs  macros.rs  math.rs  text.rs
aud_io/src/aac/: error.rs  header.rs  mod.rs
aud_io/src/config/: global.rs  global_options.rs  mod.rs  parse.rs
aud_io/src/mp4/: atom_info.rs  atom_reader.rs  constants.rs  mod.rs  properties.rs
aud_io/src/mpeg/: constants.rs  error.rs  header.rs  mod.rs
aud_io/src/musepack/: constants.rs  error.rs  mod.rs  sv4to6.rs  sv7.rs  sv8.rs
audiotags-dev-macro/: Cargo.toml
audiotags-dev-macro/src/: lib.rs
lofty/: Cargo.toml  SUPPORTED_FORMATS.md
lofty-attr/: Cargo.toml
lofty-attr/src/: lib.rs
lofty/src/: error.rs  lib.rs  macros.rs  picture.rs  probe.rs  resolve.rs
lofty/src/aac/: error.rs  header.rs  mod.rs  properties.rs  read.rs
lofty/src/ape/: error.rs  header.rs  mod.rs  properties.rs  read.rs
lofty/src/ape/tag/: error.rs  header.rs  item.rs  mod.rs  read.rs  write.rs
lofty/src/config/: global_options.rs  mod.rs  parse_options.rs  write_options.rs
lofty/src/dsd/: mod.rs
lofty/src/dsd/dff/: mod.rs  properties.rs  read.rs  write.rs  write_impl.rs
lofty/src/dsd/dff/tag/: mod.rs  write.rs
lofty/src/dsd/dsf/: mod.rs  properties.rs  read.rs  write.rs  write_impl.rs
lofty/src/dsf/: mod.rs  properties.rs  read.rs  write_impl.rs
lofty/src/ebml/: element_reader.rs  mod.rs  properties.rs  read.rs  vint.rs
lofty/src/ebml/read/: segment.rs  segment_attachments.rs  segment_chapters.rs  segment_cluster.rs  segment_info.rs  segment_seekhead.rs  segment_tags.rs  segment_tracks.rs
lofty/src/ebml/tag/: attached_file.rs  generic.rs  mod.rs  simple_tag.rs  tag.rs  tag_name.rs  target.rs  target_type.rs  tests.rs
lofty/src/ebml/tag/write/: mod.rs  type_encodings.rs
lofty/src/file/: audio_file.rs  file_type.rs  mod.rs  tagged_file.rs
lofty/src/flac/: block.rs  error.rs  mod.rs  properties.rs  read.rs  write.rs
lofty/src/id3/: mod.rs
lofty/src/id3/v1/: constants.rs  error.rs  mod.rs  read.rs  tag.rs  write.rs
lofty/src/id3/v2/: error.rs  header.rs  mod.rs  read.rs  restrictions.rs  tag.rs
lofty/src/id3/v2/frame/: content.rs  conversion.rs  error.rs  id.rs  list.rs  mod.rs  read.rs
lofty/src/id3/v2/items/: binary_frame.rs  (+20 more)
lofty/src/iff/: chunk.rs  error.rs  mod.rs
lofty/src/iff/aiff/: error.rs  mod.rs  properties.rs  read.rs  tag.rs
lofty/src/iff/wav/: error.rs  mod.rs  properties.rs  read.rs
lofty/src/mp4/: atom_info.rs  error.rs  mod.rs  moov.rs  properties.rs  read.rs  write.rs
lofty/src/mp4/ilst/: advisory_rating.rs  atom.rs  constants.rs  data_type.rs  error.rs  mod.rs  read.rs  ref.rs  write.rs
lofty/src/mp4/read/: atom_reader.rs  mod.rs
lofty/src/mpeg/: error.rs  header.rs  mod.rs  properties.rs  read.rs
lofty/src/musepack/: constants.rs  error.rs  mod.rs  read.rs
lofty/src/musepack/sv4to6/: mod.rs  properties.rs
lofty/src/musepack/sv7/: properties.rs
lofty/src/musepack/sv8/: mod.rs  properties.rs  read.rs
lofty/src/ogg/: constants.rs  mod.rs  picture_storage.rs  read.rs  tag.rs  write.rs
lofty/src/ogg/opus/: mod.rs  properties.rs
lofty/src/ogg/speex/: mod.rs  properties.rs
lofty/src/ogg/tag/: error.rs  read.rs  write.rs
lofty/src/ogg/vorbis/: mod.rs  properties.rs
lofty/src/picture/: error.rs  mod.rs
lofty/src/properties/: channel_mask.rs  file_properties.rs  mod.rs  tests.rs
lofty/src/tag/: accessor.rs  companion_tag.rs  item.rs  mod.rs  split_merge_tag.rs  tag_ext.rs  tag_type.rs  utils.rs
lofty/src/tag/items/: lang.rs  mod.rs  popularimeter.rs  timestamp.rs
lofty/src/util/: alloc.rs  io.rs  math.rs  mod.rs  num.rs  text.rs
lofty/src/wavpack/: error.rs  mod.rs  properties.rs  read.rs
lofty/tests/: dsf_quick_test.rs  hound.rs  io.rs
lofty/tests/files/: aac.rs  aiff.rs  ape.rs  dff.rs  dsf.rs  flac.rs  main.rs  matroska.rs  mp4.rs  mpc.rs  mpeg.rs  ogg.rs  resize.rs  wav.rs  wavpack.rs  zero_sized.rs
lofty/tests/files/assets/: 644_empty_id3v2.aiff  application_block_last.flac  flac_with_id3v2.flac  ilst_trailing_padding.m4a  issue_499.opus  issue_499_vinyl_track_number.opus  issue_540.opus  issue_540_leading_0.opus  non_full_meta_atom.m4a  stream_info_last.flac
lofty/tests/files/util/: mod.rs
lofty/tests/fuzz/: aacfile_read_from.rs  aifffile_read_from.rs  apefile_read_from.rs  flacfile_read_from.rs  id3v2.rs  main.rs  mp4file_read_from.rs  mpcfile_read_from.rs  mpegfile_read_from.rs  opusfile_read_from.rs  pictureinformation_from_jpeg.rs  pictureinformation_from_png.rs  speexfile_read_from.rs  vorbisfile_read_from.rs  wavfile_read_from.rs  wavpackfile_read_from.rs
lofty/tests/picture/: format_parsers.rs  from_reader.rs  information.rs  main.rs
lofty/tests/picture/assets/: png_640x628.apev2  png_640x628.pic  tiff_640x628.tiff
lofty/tests/taglib/: main.rs  test_aiff.rs  test_ape.rs  test_apetag.rs  test_fileref.rs  test_flac.rs  test_flacpicture.rs  test_id3v1.rs  test_id3v2.rs  test_info.rs  test_mp4.rs  test_mpc.rs  test_mpeg.rs  test_ogaflac.rs  test_ogg.rs  test_opus.rs  test_speex.rs  test_synchdata.rs  test_wav.rs  test_wavpack.rs  test_xiphcomment.rs
lofty/tests/taglib/data/: no-tags.ape
lofty/tests/taglib/util/: mod.rs
lofty/tests/tags/: conversions.rs  main.rs
lofty/tests/tags/assets/: test.aiff_text
lofty/tests/tags/id3v1/: mod.rs
lofty_attr/: Cargo.toml  README.md
lofty_attr/src/: attribute.rs  ebml.rs  internal.rs  lib.rs  lofty_error.rs  lofty_file.rs  lofty_tag.rs  util.rs
ogg_pager/: CHANGELOG.md  Cargo.toml  README.md
ogg_pager/src/: crc.rs  error.rs  header.rs  lib.rs  packets.rs  paginate.rs
ogg_pager/test_assets/: large_comment_packet.page  opus_ident_header.page
rust-mp4ameta/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rust-mp4ameta/mp4ameta_proc/: Cargo.toml
rust-mp4ameta/mp4ameta_proc/src/: lib.rs
rust-mp4ameta/src/: error.rs  lib.rs  tag.rs
rust-mp4ameta/src/core/: atom.rs  content.rs  data.rs  mod.rs  types.rs
(+640 files in other folders)
