[package]
name = "audiotags-dev-macro"
version = "0.1.2"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "macros used during the development of audiotags"
license = "MIT"
repository = "https://github.com/TianyiShi2001/audiotags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
