[package]
name        = "lofty"
version     = "0.20.1"
authors     = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Audio metadata library"
repository  = "https://github.com/Serial-ATA/lofty-rs"
keywords    = ["tags", "audio", "metadata", "id3", "vorbis"]
categories  = ["multimedia", "multimedia::audio", "parser-implementations"]
readme      = "../README.md"
include     = ["src", "LICENSE-APACHE", "LICENSE-MIT", "SUPPORTED_FORMATS.md"]

[dependencies]
# Vorbis comments pictures
data-encoding = "2.6.0"
byteorder     = { workspace = true }
# ID3 compressed frames
flate2        = { version = "1.0.30", optional = true }
# Proc macros
lofty_attr = "0.11.0"
# Debug logging
log           = "0.4.22"
# OGG Vorbis/Opus
ogg_pager     = "0.6.1"
# Key maps
paste         = "1.0.15"

[features]
default                   = ["id3v2_compression_support"]
id3v2_compression_support = ["dep:flate2"]

[dev-dependencies]
# WAV properties validity tests
hound     = { git = "https://github.com/ruuda/hound.git", rev = "02e66effb33683dd6acb92df792683ee46ad6a59" }
# tag_writer example
structopt = { version = "0.3.26", default-features = false }
tempfile  = "3.10.1"
iai-callgrind = "0.12.0"

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name    = "read_file"
path    = "../benches/read_file.rs"
harness = false

[[bench]]
name    = "create_tag"
path    = "../benches/create_tag.rs"
harness = false

[[example]]
name = "custom_resolver"
path = "../examples/custom_resolver/src/main.rs"

[[example]]
name = "tag_reader"
path = "../examples/tag_reader.rs"

[[example]]
name = "tag_writer"
path = "../examples/tag_writer.rs"

[[example]]
name = "tag_stripper"
path = "../examples/tag_stripper.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
