[package]
name        = "lofty"
version     = "0.23.2"
authors     = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
description = "Audio metadata library"
keywords    = ["tags", "audio", "metadata", "id3", "vorbis"]
categories  = ["multimedia", "multimedia::audio", "parser-implementations"]
readme      = "../README.md"
include     = ["src", "LICENSE-APACHE", "LICENSE-MIT", "SUPPORTED_FORMATS.md"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Vorbis comments pictures
data-encoding = "2.10.0"
byteorder     = { workspace = true }
# ID3 compressed frames
flate2        = { version = "1.1.9", optional = true }
# Proc macros
lofty_attr    = { workspace = true }
# Debug logging
log           = "0.4.29"
# OGG Vorbis/Opus
ogg_pager     = { workspace = true }
# Key maps
paste         = "1.0.15"

[features]
default                   = ["id3v2_compression_support"]
id3v2_compression_support = ["dep:flate2"]
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
# For examples
env_logger = "0.11.8"
# WAV properties validity tests
hound     = { git = "https://github.com/ruuda/hound.git", rev = "02e66effb33683dd6acb92df792683ee46ad6a59" }
regex = "1.12.3"
rusty-fork = "0.3.1"
# tag_writer example
structopt = { version = "0.3.26", default-features = false }
tempfile  = "3.24.0"
test-log = "0.2.19"
gungraun = "0.17.0"

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name    = "read_file"
path    = "../benches/read_file.rs"
harness = false

[[bench]]
name    = "create_tag"
path    = "../benches/create_tag.rs"
harness = false

[[example]]
name = "custom_resolver"
path = "../examples/custom_resolver/src/main.rs"

[[example]]
name = "tag_reader"
path = "../examples/tag_reader.rs"

[[example]]
name = "tag_stripper"
path = "../examples/tag_stripper.rs"

[[example]]
name = "tag_writer"
path = "../examples/tag_writer.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
