[package]
name = "lofty_attr"
version = "0.11.0"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for Lofty"
repository = "https://github.com/Serial-ATA/lofty-rs"
readme = "README.md"
include = ["src", "Cargo.toml", "../LICENSE-*"]

[dependencies]
syn = { version = "2.0.72", features = ["full", "parsing"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"

[lints]
workspace = true

[lib]
proc-macro = true
