[package]
name = "lofty_attr"
version = "0.11.1"
description = "Macros for Lofty"
readme = "README.md"
include = ["src", "Cargo.toml", "../LICENSE-*"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syn = { version = "2.0.72", features = ["full", "parsing"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"

[lints]
workspace = true

[lib]
proc-macro = true
