[package]
name = "ogg_pager"
version = "0.3.1"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple OGG page reader"
repository = "https://github.com/Serial-ATA/lofty-rs"
keywords = ["ogg", "xiph"]
categories = ["accessibility", "multimedia::audio"]
exclude = ["test_assets"]

[dependencies]
byteorder = "1.4.3"
