[package]
name = "mp4ameta"
version = "0.5.2"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library for reading and writing iTunes style MPEG-4 audio metadata."
categories = ["multimedia::audio", "parsing"]
keywords = ["mp4", "m4a", "audio", "metadata", "parser"]
repository = "https://github.com/Saecki/rust-mp4ameta"
edition = "2018"

[dependencies]
byteorder = "1.3.4"
lazy_static = "1.4.0"
mp4ameta_proc = { path = "mp4ameta_proc", version = "0.1.0" }

[dev-dependencies]
walkdir = "2.3.1"
